--- a/src/components/MovieListing/MovieListing.scss
+++ b/src/components/MovieListing/MovieListing.scss
@@ -6,5 +6,13 @@
         color: $font-secondary;
         margin-bottom: 10px;
         font-weight: 400;
+
     }
+}
+
+.movie-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(220px,1fr));
+    gap: 2rem;
+
 }
