--- a/src/components/MovieListing/MovieListing.scss
+++ b/src/components/MovieListing/MovieListing.scss
@@ -10,9 +10,9 @@
     }
 }
 
-.movie-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(220px,1fr));
-    gap: 2rem;
+// .movie-container{
+//     display: grid;
+//     grid-template-columns: repeat(auto-fill,minmax(220px,1fr));
+//     gap: 2rem;
 
-}
+// }
