--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -4,7 +4,10 @@
     background-color: $secondary-color;
     cursor: pointer;
     transition: all 0.3s;
-    &:hover{
+    min-height: 450px;
+    height: 100%;
+    margin: 10px;
+        &:hover{
         transform: scale(1.1);
         transition: all 0.3s;
     }
